[package]
name = "skipngo"
version = "0.0.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "A 2D game engine made so you can skip the hard stuff and go make a game!"
repository = "https://github.com/katharostech/skipngo"
documentation = "https://docs.rs/skipngo"
readme = "README.md"
keywords = ["gamedev", "game-engine", "bevy", "2D", "easy"]
categories = [
    "games",
    "game-development",
    "game-engines"
]

[dependencies]
bevy = { version = "*", default-features = false }
bevy_retrograde = { version = "0.1", features = ["ldtk"] }
serde_yaml = "0.8.17"
serde = "1.0.124"
thiserror = "1.0.24"
anyhow = "1.0.38"
hex = "0.4.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.48", features = ["Window", "Location", "Document"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
structopt = "0.3.21"

[build-dependencies]
cfg_aliases = "0.1.1"

# Enable optimizations for dependencies but not for our code
[profile.dev.package."*"]
opt-level = 3

# Enable a small amount of optimization for our code
[profile.dev]
opt-level = 1

[profile.release]
lto = true

[patch.crates-io]
winit = { git = "https://github.com/katharostech/winit", branch = "web-sys-touch-events" }
